# otter

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml
app/: .gitignore  Cargo.toml
app/.sqlx/: query-06734501db1d68b7d9df894fa7e00859c37658024be4221f593443cce3fbe1a3.json  query-07005235c0d616c6c4792bb374813000777f4191ef6434a9ec42d883ec359e8b.json  query-0705e85f6b0cb88307cb84726a04e7dfa6878e7116e19f2daf73798abb1c56e5.json  query-2826605cc0d5820a95aa77d90f55b743e709a9c2481a1b16630c2e9b7d91003b.json  query-34083558b4561b58f32ad8b7ae5dfc2a6f46c8d49e6cdeb7663c5becf96f774c.json  query-53f3829f352cd6bfa861de0a908ef322a0f5168f8027cc2ff2146a1dfcfc7f8c.json  query-572b7de0ba683572f3178374107fab30d3d497c415623cbd2d89a6a644952643.json  query-8a4d8e7df6569168b2ba2fccc1655903351bce1dbc3ed4c289e9bd671059811e.json  query-96ef70e3523898eb8240115e3a113c47cc605719c74298fb0f532bddd6637dd2.json  query-9856be6233269b8fbaafc2f83c3233228d401be2c1cf88726f1105c3ca401625.json  query-9a0ba029e527eb028e0a60a4fa6cf48d8f71b8b5b91dde082e4d95f278854023.json  query-afb1477cb008fa3db58b9bf39137be7842ef40c3ad99eeee8c9fe10d8f25f215.json  query-b1e254c4195961306fd5f7fcb410fd4fc4c6aa66b3dd5696d75c37b819398e23.json  query-d52369e9ba714452cffedb1f915221bfe72aff0ec95212d7b2d782cc5b39a52f.json  query-ddb4a7ae917961d0642d7e8d26acf9e77b8a74a9ac1a5e62eb2f570ee5c04d31.json  query-e3938470bcc5579dba7ba7b912d0c73a632ae2ff65544755a0864563f4709356.json  query-ee41f0b7ac7e7346117d51bccc441c224af8e2f289bdc3d4cdbda384f86dc6b2.json  query-f4442c1ce0e500af010b5842fcca42532e9106fe49dcb7cda5084e50e714a669.json
app/migrations/: 20260413211335_init.sql  20260414000816_add_tables.sql  20260415222543_fix_tsv_trigger.sql  20260417083730_separate_embeddings.sql  20260417110806_add_true_hours.sql  20260419171423_rename_screenshot_url.sql  20260421234641_add_trigram_indexes.sql  20260422235050_add_inferred_repo_and_username.sql  20260423003454_cleanup_trigram_indexes.sql  20260424173217_rename_columns_add_generated.sql
app/src/: error.rs  (+5 more)
(+61 files in other folders)
