[package]
name = "otter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
deadpool-redis = "0.23.0"
dotenvy = "0.15.7"
pgvector = { version = "0.4.1", features = ["sqlx"] }
redis = { version = "1.2.0", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio"] }
tokio = { version = "1.51.1", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
